UX: Fix text flickering on hover
UX: Fix text flickering on hover

--- a/common/common.scss
+++ b/common/common.scss
@@ -56,6 +56,7 @@
     transform: scale(0);
     transition: transform 0.2s ease;
     transition-delay: 0.3s;
+    will-change: transform;
 
     &-link {
       color: $dropdown_item_color;
